crates/data-dict/tests/snapshots/validate_data__nulls_in_required_column_reported.snap
---
source: crates/data-dict/tests/validate_data.rs
---
$version: "0.1.0"
$learn_more: http://data-dict.tidyverse.org/
tables:
  t:
    source:
      parquet: data.parquet
    columns:
      - name: weight
        type: number(quantity)
        constraints: [required]
        range: [0, 100]
────────────────────────────────────────
Error: [D01] A required column must not contain nulls.
    ╭─[ dict.yaml:10:23 ]
    │
  4 │   t:
    │ 
  8 │       - name: weight
    │ 
 10 │         constraints: [required]
    │                       ────┬───  
    │                           ╰───── has 1 null value (row: 2)
────╯
